[package]
name = "image-viewer"
version = "0.1.0"
authors = ["migue07mx <migue07mx@protonmail.com>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arboard = { version = "3.3.2", features = ["wayland-data-control"]}
image = "0.25.0"
slint = { version = "1.5", features = ["renderer-skia-vulkan"] }

[build-dependencies]
slint-build = "1.5"
